# DL2

./: .gitignore  IZVJESTAJ.md  PRESENTATION_CHECKLIST.md  Prezentacija.pptx  README.md  calibrate.py  check_dataset.py  create_summary_plots.py  dataset_utils.py  draft.md  embed.py  heads.py  main.py  plot_results.py  pyproject.toml  requirements.txt  results.pt  run_pipeline.sh  test.py  text_embed.py  todo.md  todo.txt  utils.py
src/: calibrate.py  dataset_utils.py  heads.py  main.py  plot_results.py  summary.py  text_embed.py  utils.py  visualize.py
