[project]
name = "dl2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.4.2",
    "matplotlib>=3.10.8",
    "open-clip-torch>=3.2.0",
    "pandas>=2.3.3",
    "pillow>=12.1.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]
